<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8800"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity" >
    
    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0"
        android:clickable="true"
        android:gravity="left"
        android:onClick="goBack"
        android:text="@string/back"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0.60"
        android:gravity="center"
        android:text="@string/Diffic"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="25sp" />


    <Button
        android:checked="false"
        android:selectable ="true"
        android:clickable="true"
        android:id="@+id/btnEasy"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.37"
        android:layout_marginTop="20dp"
        android:background="@color/text_color2"
		android:typeface="monospace" 
        android:fontFamily="roboto"
        android:textColor="#ffffff"
        android:textSize="45sp"
        android:text="@string/easy" 
        android:gravity="center"
        android:onClick = "buttonEasy"
        />

    <Button
        android:checked="false"
        android:selectable ="true"
        android:clickable="true"
        android:id="@+id/btnMedium"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.37"
        android:layout_marginTop="1dp"
        android:background="@color/text_color2"
		android:typeface="monospace" 
        android:fontFamily="roboto"
        android:textColor="#ffffff"
        android:textSize="45sp"
        android:text="@string/medium" 
        android:gravity="center" 
        android:onClick = "buttonMedium"/>

     <Button
        android:checked="false"
        android:selectable ="true"
        android:clickable="true"
        android:id="@+id/btnHard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.37"
        android:layout_marginTop="1dp"
        android:background="@color/text_color2"
		android:typeface="monospace" 
        android:fontFamily="roboto"
        android:textColor="#ffffff"
        android:textSize="45sp"
        android:text="@string/hard" 
        android:gravity="center"
        android:onClick = "buttonHard"/>

    <Button
        android:id="@+id/btnNext"
         android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.60"
        android:background="@color/text_color3"
       	android:clickable="true"
        android:onClick = "goNext"
        android:text="@string/Next" 
        android:textColor="@color/text_color1"
        android:textSize="45sp"/>
  
  

</LinearLayout>
